--- a/php/php.ini
+++ b/php/php.ini
@@ -931,6 +931,9 @@ extension=mbstring
 ;extension=odbc
 extension=openssl
 extension=intl
+extension=php_mysqli
+extension=php_pdo_mysql
+extension=php_pdo_sqlite
 ;extension=pdo_firebird
 ;extension=pdo_mysql
 ;extension=pdo_oci
