--- a/Apache24/conf/httpd.conf
+++ b/Apache24/conf/httpd.conf
@@ -245,7 +245,7 @@ ServerName localhost
 </Directory>
 
 # Virtual hosts
-Include conf/httpd-vhosts.conf
+Include conf/sites-enabled/*.conf
 
 #
 # Note that from this point forward you must specifically allow
