enable extension php

--- a/php/php.ini
+++ b/php/php.ini
@@ -934,6 +934,9 @@ extension=intl
 extension=php_mysqli
 extension=php_pdo_mysql
 extension=php_pdo_sqlite
+extension=php_fileinfo
+extension=php_gd
+extension=php_exif
 ;extension=pdo_firebird
 ;extension=pdo_mysql
 ;extension=pdo_oci
