--- a/php/php.ini
+++ b/php/php.ini
@@ -1924,7 +1924,7 @@ ldap.max_links = -1
 [curl]
 ; A default value for the CURLOPT_CAINFO option. This is required to be an
 ; absolute path.
-;curl.cainfo =
+curl.cainfo = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 
 [openssl]
 ; The location of a Certificate Authority (CA) file on the local filesystem
@@ -1933,7 +1933,7 @@ ldap.max_links = -1
 ; OS-managed cert stores in its absence. If specified, this value may still
 ; be overridden on a per-stream basis via the "cafile" SSL stream context
 ; option.
-;openssl.cafile=
+openssl.cafile = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 
 ; If openssl.cafile is not specified or if the CA file is not found, the
 ; directory pointed to by openssl.capath is searched for a suitable
