--- a/php/php.ini
+++ b/php/php.ini
@@ -1933,7 +1933,7 @@ curl.cainfo = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 ; OS-managed cert stores in its absence. If specified, this value may still
 ; be overridden on a per-stream basis via the "cafile" SSL stream context
 ; option.
-openssl.cafile = "D:\SERVER\local\php\extras\ssl\cacert.pem"
+;openssl.cafile = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 
 ; If openssl.cafile is not specified or if the CA file is not found, the
 ; directory pointed to by openssl.capath is searched for a suitable
@@ -1953,3 +1953,10 @@ openssl.cafile = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 
 ; List of headers files to preload, wildcard patterns allowed.
 ;ffi.preload=
+
+[XDEBUG]
+zend_extension="D:/SERVER/local/php/ext/php_xdebug-3.2.0RC2-8.1-vs16-x86_64.dll"
+xdebug.mode=debug
+xdebug.client_host = 127.0.0.1
+xdebug.client_port = 9003
+xdebug.start_with_request=trigger
