--- a/php/php.ini
+++ b/php/php.ini
@@ -1956,7 +1956,7 @@ curl.cainfo = "D:\SERVER\local\php\extras\ssl\cacert.pem"
 
 [XDEBUG]
 zend_extension="D:/SERVER/local/php/ext/php_xdebug-3.2.0RC2-8.1-vs16-x86_64.dll"
-xdebug.mode=debug
+xdebug.mode=coverage
 xdebug.client_host = 127.0.0.1
 xdebug.client_port = 9003
 xdebug.start_with_request=trigger
