--- a/php/php.ini
+++ b/php/php.ini
@@ -914,6 +914,7 @@ default_socket_timeout = 60
 ;
 ;extension=bz2
 extension=curl
+extension=php_redis.dll
 ;extension=ffi
 ;extension=ftp
 ;extension=fileinfo
