--- a/php/php.ini
+++ b/php/php.ini
@@ -915,6 +915,7 @@ default_socket_timeout = 60
 ;extension=bz2
 extension=curl
 extension=php_redis.dll
+extension=php_ssh2.dll
 ;extension=ffi
 ;extension=ftp
 ;extension=fileinfo
