update extension php

--- a/php/php.ini
+++ b/php/php.ini
@@ -954,7 +954,7 @@ extension=php_exif
 
 ;extension=soap
 ;extension=sockets
-;extension=sodium
+extension=sodium
 ;extension=sqlite3
 ;extension=tidy
 ;extension=xsl
